Fixed layout of the vertical action group in the organization info page, and set the icons in buttons to be left-aligned site-wide.

--- a/src/dssgmkt/static/css/dssgsolve.css
+++ b/src/dssgmkt/static/css/dssgsolve.css
@@ -45,3 +45,8 @@
 .main-page-container {
   padding-bottom: 50px;
 }
+
+.btn i {
+  float: left;
+  margin-right: 5px;
+}
